# Unity_Opus

./: .gitmodules  README.md  package.json
PluginsGen~/: .gitignore  CMakeLists.txt  build.bat  build.sh
Runtime/: OpusDecoder.cs  OpusEncoder.cs  OpusException.cs  OpusWrapper.cs  Unity.Codecs.Opus.asmdef
Runtime/Enums/: Bandwidth.cs  Channels.cs  Complexity.cs  Delay.cs  ForceChannels.cs  OpusApplicationType.cs  OpusCtlGetRequest.cs  OpusCtlSetRequest.cs  OpusStatusCode.cs  SamplingRate.cs  SignalHint.cs
